BUGFIX: Correct alignment

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Public/Frontend/scss/_collection.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Public/Frontend/scss/_collection.scss
@@ -10,5 +10,12 @@
 		.inline-icon {
 			margin-top: 0.2em;
 		}
+
+        // Clear floating icons
+        &:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
 	}
 }
